plugins {
  id 'java-library'
  id 'maven-publish'
  id 'signing'
}


description 'Method Logging Extension for Spring'
group 'de.sayayi.lib'
version '0.5.0-SNAPSHOT'


layout.buildDirectory = '.build'


ext.resolveVersion = { artifactName ->
  configurations
      .compileClasspath
      .resolvedConfiguration
      .resolvedArtifacts
      .find { it.name == artifactName }
      .moduleVersion.id.version
}


java {
  registerFeature('optional') {
    usingSourceSet sourceSets.main
  }

  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}


compileTestJava {
  options.debugOptions.debugLevel = 'lines,vars,source'
  options.compilerArgs = [ '-parameters' ]
}


compileJava {
  options.compilerArgs.addAll([
    '--add-reads', 'de.sayayi.lib.methodlogging=ALL-UNNAMED'
  ])
}


test {
  useJUnitPlatform()
}


repositories {
  mavenCentral()
}


dependencies {
  // java
  compileOnlyApi libs.jetbrains.annotations

  optionalCompileOnlyApi libs.slf4j.api
  optionalCompileOnlyApi libs.log4j.api
  optionalCompileOnlyApi libs.logback.classic
  optionalCompileOnlyApi libs.tinylog.api
  optionalCompileOnlyApi libs.jboss.logging

  implementation libs.spring.context
  implementation libs.message.format


  // test
  testAnnotationProcessor libs.lombok

  testCompileOnly libs.jetbrains.annotations
  testCompileOnly libs.lombok

  testImplementation libs.junit.jupiter.api
  testImplementation libs.spring.test

  testRuntimeOnly libs.junit.jupiter.engine
  testRuntimeOnly libs.junit.platform.launcher
}


javadoc {
  title = "Spring Method Logging Extension ${version}"

  (options as StandardJavadocDocletOptions).with {
    linksOffline "https://javadoc.io/doc/org.jetbrains/annotations/${resolveVersion('annotations')}/",
                 'gradle/javadocs/jetbrains-annotations'
    linksOffline "https://javadoc.io/doc/de.sayayi.lib/message-format/${resolveVersion('message-format')}/",
                 'gradle/javadocs/message-format'
    linksOffline "https://javadoc.io/doc/org.springframework/spring-beans/${resolveVersion('spring-beans')}/",
                 'gradle/javadocs/spring-beans'
    linksOffline "https://javadoc.io/doc/org.springframework/spring-context/${resolveVersion('spring-context')}/",
                 'gradle/javadocs/spring-context'
    linksOffline "https://javadoc.io/doc/org.springframework/spring-core/${resolveVersion('spring-core')}/",
                 'gradle/javadocs/spring-core'

    encoding = 'UTF-8'

    group('Spring Method Logging', [
        'de.sayayi.lib.methodlogging',
        'de.sayayi.lib.methodlogging.annotation',
        'de.sayayi.lib.methodlogging.internal',
        'de.sayayi.lib.methodlogging.logger'
    ])

    noQualifiers 'java.util', 'java.lang'

    addStringOption('Xdoclint:-missing', '-quiet')
    addStringOption('-show-module-contents', 'api')
    addStringOption('-add-reads', 'de.sayayi.lib.methodlogging=ALL-UNNAMED')
  }

  failOnError = false
}


apply from: file('gradle/publishing.gradle')


wrapper {
  distributionType = Wrapper.DistributionType.BIN
}
